Return ID when posting Knowledge Interactions. Implement new /sc/ki GET with IDs. Implement /sc/ki DELETE.
