# rest-api/src/main/java/eu/interconnectproject/knowledge_engine/rest/api/impl/RestKnowledgeBase.java
@@ -7,6 +7,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 import java.util.Set;
+import java.util.Map.Entry;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
@@ -15,10 +16,13 @@ import javax.servlet.AsyncContext;
 
 import org.apache.jena.rdf.model.Resource;
 import org.apache.jena.rdf.model.ResourceFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import eu.interconnectproject.knowledge_engine.rest.model.AskResult;
 import eu.interconnectproject.knowledge_engine.rest.model.PostResult;
 import eu.interconnectproject.knowledge_engine.rest.model.Workaround;
+import eu.interconnectproject.knowledge_engine.rest.model.WorkaroundWithId;
 import eu.interconnectproject.knowledge_engine.smartconnector.api.AnswerHandler;
 import eu.interconnectproject.knowledge_engine.smartconnector.api.AnswerKnowledgeInteraction;
 import eu.interconnectproject.knowledge_engine.smartconnector.api.AskKnowledgeInteraction;
@@ -34,6 +38,7 @@ import eu.interconnectproject.knowledge_engine.smartconnector.api.SmartConnector
 import eu.interconnectproject.knowledge_engine.smartconnector.impl.SmartConnectorBuilder;
 
 public class RestKnowledgeBase implements KnowledgeBase {
+	private static final Logger LOG = LoggerFactory.getLogger(RestKnowledgeBase.class);
 
 	private String knowledgeBaseId;
 	private String knowledgeBaseName;
@@ -74,31 +79,32 @@ public class RestKnowledgeBase implements KnowledgeBase {
 
 	};
 
-	public boolean register(Workaround workaround) {
+	public String register(Workaround workaround) {
 		var ca = new CommunicativeAct(toResources(workaround.getCommunicativeAct().getRequiredPurposes()), toResources(workaround.getCommunicativeAct().getSatisfiedPurposes()));
 
 		String type = workaround.getKnowledgeInteractionType();
+		URI kiId;
 		if (type.equals("AskKnowledgeInteraction")) {
 			var askKI = new AskKnowledgeInteraction(ca, new GraphPattern(workaround.getGraphPattern()));
-			URI kiId = this.sc.register(askKI);
+			kiId = this.sc.register(askKI);
 			this.knowledgeInteractions.put(kiId, askKI);
 		} else if (type.equals("AnswerKnowledgeInteraction")) {
 			var answerKI = new AnswerKnowledgeInteraction(ca, new GraphPattern(workaround.getGraphPattern()));
-			URI kiId = this.sc.register(answerKI, this.handler);
+			kiId = this.sc.register(answerKI, this.handler);
 			this.knowledgeInteractions.put(kiId, answerKI);
 		} else if (type.equals("PostKnowledgeInteraction")) {
 			var postKI = new PostKnowledgeInteraction(ca, new GraphPattern(workaround.getArgumentGraphPattern()), new GraphPattern(workaround.getResultGraphPattern()));
-			URI kiId = this.sc.register(postKI);
+			kiId = this.sc.register(postKI);
 			this.knowledgeInteractions.put(kiId, postKI);
 		} else if (type.equals("ReactKnowledgeInteraction")) {
 			var reactKI = new ReactKnowledgeInteraction(ca, new GraphPattern(workaround.getArgumentGraphPattern()), new GraphPattern(workaround.getResultGraphPattern()));
-			URI kiId = this.sc.register(reactKI, this.reactHandler);
+			kiId = this.sc.register(reactKI, this.reactHandler);
 			this.knowledgeInteractions.put(kiId, reactKI);
 		} else {
-			return false;
+			return null;
 		}
 
-		return true;
+		return kiId.toString();
 	}
 
 	private Set<Resource> toResources(List<String> strings) {
@@ -107,16 +113,85 @@ public class RestKnowledgeBase implements KnowledgeBase {
 		}).collect(Collectors.toSet());
 	}
 
-	public Workaround getKnowledgeInteraction(String knowledgeInteractionId) {
+	public WorkaroundWithId getKnowledgeInteraction(String knowledgeInteractionId) {
 		throw new RuntimeException("TODO");
 	}
 	
-	public Set<Workaround> getKnowledgeInteractions() {
-		throw new RuntimeException("TODO");
+	public Set<WorkaroundWithId> getKnowledgeInteractions() {
+		return this.knowledgeInteractions.entrySet().stream()
+			.map((Entry<URI, KnowledgeInteraction> e) -> this.kiToWorkAroundWithId(e.getKey(), e.getValue()))
+			.collect(Collectors.toSet());
+	}
+
+	private WorkaroundWithId kiToWorkAroundWithId(URI kiId, KnowledgeInteraction ki) {
+		var act = ki.getAct();
+		var requirements = act.getRequirementPurposes().stream().map(r -> r.toString()).collect(Collectors.toList());
+		var satisfactions = act.getSatisfactionPurposes().stream().map(r -> r.toString()).collect(Collectors.toList());
+		var wwid = new WorkaroundWithId()
+			.knowledgeInteractionId(kiId.toString())
+			.communicativeAct(new eu.interconnectproject.knowledge_engine.rest.model.CommunicativeAct()
+				.requiredPurposes(requirements)
+				.satisfiedPurposes(satisfactions)
+			);
+
+		if (ki instanceof AskKnowledgeInteraction) {
+			wwid.setKnowledgeInteractionType("AskKnowledgeInteraction");
+			wwid.setGraphPattern(((AskKnowledgeInteraction) ki).getPattern().getPattern());
+		} else if (ki instanceof AnswerKnowledgeInteraction) {
+			wwid.setKnowledgeInteractionType("AnswerKnowledgeInteraction");
+			wwid.setGraphPattern(((AnswerKnowledgeInteraction) ki).getPattern().getPattern());
+		} else if (ki instanceof PostKnowledgeInteraction) {
+			wwid.setKnowledgeInteractionType("PostKnowledgeInteraction");
+			wwid.setArgumentGraphPattern(((PostKnowledgeInteraction) ki).getArgument().getPattern());
+			wwid.setResultGraphPattern(((PostKnowledgeInteraction) ki).getResult().getPattern());
+		} else if (ki instanceof ReactKnowledgeInteraction) {
+			wwid.setKnowledgeInteractionType("ReactKnowledgeInteraction");
+			wwid.setArgumentGraphPattern(((ReactKnowledgeInteraction) ki).getArgument().getPattern());
+			wwid.setResultGraphPattern(((ReactKnowledgeInteraction) ki).getResult().getPattern());
+		} else {
+			assert false : "Encountered unknown knowledge interaction subclass.";
+			LOG.error("Encountered a knowledge interaction instance ({}) of an unknown knowledge interaction subclass. Some properties are missing from the result!", ki);
+		}
+
+		return (WorkaroundWithId) wwid;
+	}
+
+	public boolean hasKnowledgeInteraction(String knowledgeInteractionId) {
+		try {
+			return this.knowledgeInteractions.containsKey(new URI(knowledgeInteractionId));
+		} catch (URISyntaxException e) {
+			return false;
+		}
 	}
 	
-	public boolean delete(String knowledgeInteractionId) {
-		throw new RuntimeException("TODO");
+	public void delete(String knowledgeInteractionId) {
+		URI kiId;
+		try {
+			kiId = new URI(knowledgeInteractionId);
+		} catch (URISyntaxException e) {
+			LOG.warn("Tried to delete a knowledge interaction with an invalid URI '{}'. Ignored.", knowledgeInteractionId);
+			return;
+		}
+
+		var ki = this.knowledgeInteractions.remove(kiId);
+
+		if (ki == null) {
+			LOG.warn("Tried to delete an unknown knowledge interaction '{}'. Ignored.", kiId);
+			return;
+		}
+
+		if (ki instanceof AskKnowledgeInteraction) {
+			this.sc.unregister((AskKnowledgeInteraction) ki);
+		} else if (ki instanceof AnswerKnowledgeInteraction) {
+			this.sc.unregister((AnswerKnowledgeInteraction) ki);
+		} else if (ki instanceof PostKnowledgeInteraction) {
+			this.sc.unregister((PostKnowledgeInteraction) ki);
+		} else if (ki instanceof ReactKnowledgeInteraction) {
+			this.sc.unregister((ReactKnowledgeInteraction) ki);
+		} else {
+			assert false : "Encountered unknown knowledge interaction subclass.";
+			LOG.error("Encountered a knowledge interaction instance ({}) of an unknown knowledge interaction subclass. It has not been unregistered from the smart connector!", ki);
+		}
 	}
 	
 	public AskResult ask(String kiId, List<Map<String, String>> bindings) {
