# rest-api/src/main/resources/openapi-sc.yaml
@@ -376,6 +376,13 @@ components:
         - $ref: '#/components/schemas/AnswerKnowledgeInteraction'
         - $ref: '#/components/schemas/PostKnowledgeInteraction'
         - $ref: '#/components/schemas/ReactKnowledgeInteraction'
+    WorkaroundWithId:
+      allOf:
+        - $ref: '#/components/schemas/Workaround'
+        - type: object
+          properties:
+            knowledgeInteractionId:
+              type: string
     AskKnowledgeInteraction:
       allOf:
         - $ref: '#/components/schemas/KnowledgeInteraction'
